<resources>
    <string name="app_name">mvc</string>
    <string name="radiobutton">RadioButton</string>
    <string name="hello">Hello, Evgeny!</string>
    <string name="prev">Назад</string>
    <string name="next">Далее</string>
    <string name="complete">Завершить</string>
    <string name="hint">Подсказка</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="btn_back">Назад</string>
    <string name="tv_result_page">Ваши ответы:</string>
    <string name="info">info</string>
    <string name="date">date</string>
    <string name="result">result</string>
    <string name="exams_list">Список экзаменов</string>
    <string name="tv_label_date_time">Дата и время</string>
    <string name="btn_label_date">Дата</string>
    <string name="btn_label_time">Время</string>
    <string name="btn_date_time_fragment">Date/time fragment</string>
    <string name="add_item">Добавить</string>
    <string name="delete_item">Удалить</string>
</resources>
